# grobots

./: .gitignore  GBHeadless.cpp  Makefile.am  README  configure.ac  flake.nix  grobots_wasm.js  grobots_wasm.wasm  index.html  meson.build  shell.html  todo.txt  wasm.txt
.github/workflows/: pages.yml
brains/: GBStackBrain.h  GBStackBrainOpcodes.cpp  GBStackBrainOpcodes.h  GBStackBrainPrimitives.cpp  GBStackBrainSpec.cpp  GBStackBrainSpec.h
mac/: Info.plist  grobots.icns
mac/Grobots.xcodeproj/: project.pbxproj
sides/: GBHardwareSpec.cpp  GBRobotType.cpp  GBScores.cpp  GBSide.cpp  GBSide.h  GBSideReader.cpp  GBSideReader.h
simulation/: GBFood.cpp  GBFood.h  GBHardwareState.cpp  GBHardwareState.h  GBMessages.cpp  GBMessages.h  GBObject.cpp  GBObject.h  GBRobot.cpp  GBRobot.h  GBSensorShot.cpp  GBSensorShot.h  GBShot.cpp  GBShot.h  GBWorld.cpp  GBWorld.h
source/: GBHeadless.cpp  Makefile.am
source/brains/: GBBrainSpec.cpp  GBBrainSpec.h  GBStackBrain.cpp  GBStackBrain.h  GBStackBrainOpcodes.cpp  GBStackBrainOpcodes.h  GBStackBrainPrimitives.cpp  GBStackBrainSpec.cpp  GBStackBrainSpec.h
source/mac/Grobots.xcodeproj/: project.pbxproj
source/sides/: GBHardwareSpec.h  GBRobotType.cpp  GBRobotType.h  GBScores.cpp  GBScores.h  GBSide.cpp  GBSide.h  GBSideReader.cpp  GBSideReader.h
source/simulation/: GBDecorations.cpp  GBDecorations.h  GBHardwareState.cpp  GBHardwareState.h  GBObject.cpp  GBObject.h  GBRobot.cpp  GBRobot.h  GBShot.cpp  GBShot.h  GBWorld.cpp  GBWorld.h
source/support/: GBErrors.cpp  GBFinePoint.cpp  GBLongNumber.cpp  GBLongNumber.h  GBNumber.cpp  GBNumber.h  GBRandomState.cpp  GBStringUtilities.cpp  GBStringUtilities.h
source/ui/: GBApplication.cpp  GBViewsApplication.cpp  GBViewsApplication.h  GBWindow.cpp
source/views/: GBAboutBox.cpp  GBDebugger.cpp  GBMiniMap.cpp  GBPortal.cpp  GBPortal.h  GBRobotTypeView.cpp  GBRosterView.cpp  GBRosterView.h  GBScoresView.cpp  GBScoresView.h  GBSideDebugger.cpp  GBSideDebugger.h  GBTournamentView.cpp  GBView.cpp  GBView.h
source/win/WinGrobots/: Menus.rc
support/: GBCache.h  GBColor.cpp  GBColor.h  GBDeletionReporter.cpp  GBDeletionReporter.h  GBErrors.cpp  GBErrors.h  GBFinePoint.cpp  GBFinePoint.h  GBFontManager.cpp  GBFontManager.h  GBGraphics.cpp  GBGraphics.h  GBMilliseconds.cpp  GBPlatform.h  GBRandomState.cpp  GBRandomState.h  GBSound.cpp  GBStringUtilities.cpp  GBStringUtilities.h  SDL.hpp
top9/: faithless-1.gb  isi-33.gb  mice.gb
ui/: GBApplication.cpp  GBApplication.h  GBMain.cpp  GBSDLApplication.cpp  GBSDLApplication.h  GBSDLWindow.cpp  GBSDLWindow.h  GBViewsApplication.cpp  GBViewsApplication.h  GBWindow.cpp  GBWindow.h
views/: GBAboutBox.cpp  GBAboutBox.h  GBDebugger.cpp  GBDebugger.h  GBMenu.cpp  GBMenu.h  GBMiniMap.cpp  GBMiniMap.h  GBMultiView.cpp  GBMultiView.h  GBPortal.cpp  GBPortal.h  GBRobotTypeView.cpp  GBRosterView.cpp  GBRosterView.h  GBScoresView.cpp  GBSideDebugger.cpp  GBTournamentView.h  GBView.cpp  GBView.h
win/: Menus.rc  resource.h
